[package]
edition = "2021"
name = "button_board"
version = "0.1.0"
rust-version = "1.83"

[dependencies]
# Embassy basics
embassy-rp = { version = "0.4.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = { version = "0.6.2", features = ["defmt"]}
embassy-time = {version = "0.4.0", features = ["defmt"]}
embassy-futures = "0.1.1" 
embassy-executor = { version = "0.7.0", features = ["defmt", "task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt"] }

# Debugging
defmt-rtt = "0.4.2"
defmt = "0.3.10"
panic-probe = "0.3.2"

# Hardware basics
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"

# For raw hardware access
embedded-hal-async = "1.0"
embedded-io-async = { version = "0.6.1" }
embedded-storage = { version = "0.3" }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }

# Misc libraries
critical-section = "1.2.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
incremental = true
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug-assertions = false
incremental = true
lto = true
opt-level = 3
debug = true
strip = false

# cargo test
[profile.test]
codegen-units = 1
debug = true
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = 3
